Fix menu z-index

--- a/src/components/Menu/components/Item/style.scss
+++ b/src/components/Menu/components/Item/style.scss
@@ -10,7 +10,7 @@
     &:nth-child(3) {
         left: 50px;
         position: absolute;
-        top: -40px;
+        top: 0;
         z-index: 20;
     }
 
